--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8" />
 	<meta name="theme-color" content="#000000" />
 	<title>Tech Rental</title>
+	<style>
+		a{
+			text-decoration: none;
+			color: #ffffff;
+		}
+	</style>
 </head>
 
 <body>
