refactor: namespaces, code style

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="theme-color" content="#000000" />
-	<title>Tech Rental</title>
-	<style>
+    <meta charset="utf-8"/>
+    <meta content="#000000" name="theme-color"/>
+    <title>Tech Rental</title>
+    <style>
 		a{
 			text-decoration: none;
 			color: #ffffff;
 		}
-	</style>
+	
+    </style>
 </head>
 
 <body>
-	<div id="root"></div>
+<div id="root"></div>
 </body>
 
 </html>
